<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about_view_title">About Cloudsdale</string>
    <string name="about_license_button_text">Open Source Licenses</string>
    <string name="account_type">org.cloudsdale.android.account</string>
    <string name="app_name">Cloudsdale Beta</string>
    <string name="auth_token_type">org.cloudsdale.android</string>
    <string name="cloudsdale_logo_description">Cloudsdale logo</string>
    <string name="cloud_list_item_icon_description">Cloud icon</string>
    <string name="cloud_view_avatar_description">User avatar</string>
    <string name="cloud_view_chat_hint">Type a message here</string>
    <string name="home_settings_button_text">Settings</string>
    <string name="home_logout_button_text">Logout</string>
    <string name="home_user_icon_description">User avatar</string>
    <string name="home_register_date_text">You registered on</string>
    <string name="home_cloud_count_text">You\'re a member of %1$s clouds</string>
    <string name="home_site_role_text">You are %1$s the site</string>
    <string name="home_warning_count_text">You have %1$s warnings</string>
    <string name="login_dialog_wait_string">Logging in, please wait</string>
    <string name="login_view_facebook_button_text">Facebook</string>
    <string name="login_view_email_hint">Email Address</string>
    <string name="login_view_login_button_text">Sign in</string>
    <string name="login_view_password_hint">Password</string>
    <string name="login_view_twitter_button_text">Twitter</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_item_list">Items</string>
    <string name="title_cloud_detail">Cloud Detail</string>
    <string name="title_cloud_list">Clouds</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="menu_register_account">Register</string>
    <string name="about_contributor_title">Contributors</string>
    <string name="contributor_subheader">The staff of Cloudsdale would also like to thank:</string>
    <string name="profile_loading_text">Loading your profile...</string>
    <string name="sliding_menu_fragment_tag">sliding_menu_fragment</string>
    <string name="sliding_menu_static_nav_header">Navigation</string>
    <string name="sliding_menu_cloud_nav_header">Clouds</string>
    <string name="cloud_list_fragment_tag">cloud_list_fragment</string>
    <string name="chat_connecting_text">Chat is connecting...</string>
    <string name="chat_loading_message">Loading chat messages...</string>

</resources>