<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1.0" >

    <ImageView
        android:id="@+id/login_view_logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_weight="0.2"
        android:contentDescription="@string/cloudsdale_logo_description"
        android:src="@drawable/main_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_email_field"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_margin="6dp"
            android:ems="10"
            android:hint="@string/login_view_email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_password_field"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_margin="6dp"
            android:ems="10"
            android:hint="@string/login_view_password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_view_cd_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="6dp"
            android:text="@string/login_view_login_button_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1" >

            <Button
                android:id="@+id/login_view_fb_button"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="6dp"
                android:layout_weight=".5"
                android:text="@string/login_view_facebook_button_text" />

            <Button
                android:id="@+id/login_view_twitter_button"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="6dp"
                android:layout_weight=".5"
                android:text="@string/login_view_twitter_button_text" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>