<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/user_home_icon"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/home_user_icon_description"
        android:src="@drawable/unknown_user" />

    <TextView
        android:id="@+id/user_home_display_name"
        android:layout_width="fill_parent"
        android:layout_height="88dp"
        android:layout_margin="8dp"
        android:layout_toRightOf="@id/user_home_icon"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/home_button_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_home_icon"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/home_settings_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:layout_weight=".5"
            android:text="@string/home_settings_button_text" />

        <Button
            android:id="@+id/home_logout_button"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:layout_weight=".5"
            android:text="@string/home_logout_button_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/user_home_registered_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_button_container"
        android:layout_margin="8dp" />

    <TextView
        android:id="@+id/user_home_cloud_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_home_registered_text"
        android:layout_margin="8dp" />

    <TextView
        android:id="@+id/user_home_site_role"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_home_cloud_count"
        android:layout_margin="8dp" />

    <TextView
        android:id="@+id/user_home_warnings_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_home_site_role"
        android:layout_margin="8dp" />

</RelativeLayout>